--- a/index.html
+++ b/index.html
@@ -9,22 +9,31 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+   <style>
+    body {background-color: lightcoral;}
+    h1   {color: grey;}
+    p    {color: red;}
+    h3   {color: lightblue}
+    a    {color: cyan}
+    div  {color: orange}
+    </style>
   </head>
+  
   <body>
     <div class="container">
       <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
+        <h1><strong><u>Mission to Mars</u></strong></h1>
         <!-- Add a button to activate scraping script -->
         <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-sm-6 col-lg-8">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h2><strong>Latest Mars News</strong></h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
@@ -34,8 +43,8 @@
 
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+        <div class=".col-xs-6 col-lg-4">
+          <h2><strong>Featured Mars Image</strong></h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
@@ -45,7 +54,7 @@
           />
         </div>
 
-        <div class="col-md-4">
+        <div class="col-xs-12 col-sm-6 col-lg-8">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
@@ -61,11 +70,11 @@
         </div>
 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class=".col-xs-6 .col-lg-4">
           <div class="thumbnail">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+              <h3><strong>{{hemisphere.name}}</strong></h3><em>{{hemisphere.title}}</em></h3>
             </div>
           </div>
         </div>
